# esp-patchy-wifi

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c2  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c5  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3
.pre-commit/: cmake-format_config.py  license_header.txt
main/: CMakeLists.txt  Kconfig.projbuild  console.c  console.h  fault_injector.c  fault_injector.h  gateway.c  gateway.h  idf_component.yml  main.c  provisioning.c  provisioning.h  ui.c  ui.h
